Fixed the input fields alignment issue on punch in time

--- a/php/orangehrm/symfony/plugins/orangehrmAttendancePlugin/web/css/punchTimeSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmAttendancePlugin/web/css/punchTimeSuccess.css
@@ -63,7 +63,7 @@ label, span.formLabel, span.wideFormLabel {
 form#punchTimeForm label {
     position: relative;
     margin-top: 6px;
-    width: 30px
+    width: 60px
 }
 
 .date{
